# pam_smbsync

./: CMakeLists.txt  README.md
cmake/: FindPAM.cmake
src/: pam_smbsync.c
